--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ anyhow = "1.0.51"
 reqwest = { version = "0.11", features = ["json"] }
 websocket-lite = "0.5.0"
 rand = "0.8.4"
+dotenv = "0.15.0"
+
+# Database
+mongodb = "2.1.0"
